[package]
name = "timetable"
description = "Construct timetables from General Transit Feed Specification (GTFS)"
version = "0.1.0"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/timetable"
license = "MIT"

[dependencies]
chrono = "0.4.0"
colored = "1.9.0"
geodate = "0.3.0"
getopts = "0.2.15"
regex = "0.2.5"
reqwest = "0.9.16"
transitfeed = "0.3.0"
zip = "0.2.6"
